<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="business_name">Udacity</string>
    <string name="address1">2465 Latham St</string>
    <string name="address2">Mountain View, CA 94043</string>
    <string name="phone">650-555-5555</string>
    <string name="website"> www.udacity.com</string>
    <string name="promo">New Year, New Skills. Learn tomorrow\'s skills today.</string>
</resources>
