<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin"
    tools:context="com.example.andrpid.helloandroid.MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/business_name"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:src="@drawable/udacity_banner_light"
        android:background="@color/white"
        android:scaleType="fitCenter"/>

     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="@dimen/text_weight"
         android:gravity="center"
         android:autoLink="map"
         android:paddingTop="@dimen/padding"
         android:paddingBottom="@dimen/padding"
         android:background="@color/primaryColor"
         android:text="@string/address1"
         android:textSize="@dimen/font"
         android:textColor="@color/primaryTextColor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/text_weight"
        android:gravity="center"
        android:autoLink="map"
        android:paddingBottom="@dimen/padding"
        android:background="@color/primaryColor"
        android:text="@string/address2"
        android:textSize="@dimen/font"
        android:textColor="@color/primaryTextColor"/>
     <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/text_weight"
        android:gravity="center"
        android:autoLink="phone"
        android:textColorLink="@color/primaryTextColor"
        android:paddingBottom="@dimen/padding"
        android:background="@color/primaryColor"
        android:text="@string/phone"
        android:textSize="@dimen/font"
        android:textColor="@color/primaryTextColor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/primaryTextColor"
        android:autoLink="web"
        android:textColorLink="@color/primaryTextColor"
        android:background="@color/primaryColor"
        android:text="@string/website"
        android:textSize="@dimen/font"/>
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/promo"
        android:layout_weight="1"
        android:paddingStart="60dp"
        android:paddingLeft="60dp"
        android:src="@drawable/images"
        android:scaleType="centerCrop"/>
</LinearLayout>
